tests/errors/err_line_too_large.bas
10 PRINT "OK"
99999 PRINT "TOO BIG"
